--- a/assigments/CSS/Frameworks/pos/pages/ItemForm.html
+++ b/assigments/CSS/Frameworks/pos/pages/ItemForm.html
@@ -56,8 +56,8 @@
             </div>
             <div class="col">
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="Search">
+                    <button class="btn btn-success" type="button" id="btnSearch">Search</button>
                 </form>
             </div>
         </div>
@@ -70,13 +70,15 @@
                         <div class="col">
                             <div class="mb-3">
                                 <label for="txtItemID" class="form-label">Item ID</label>
-                                <input type="email" class="form-control" id="txtItemID" aria-describedby="emailHelp">
+                                <input  class="form-control" id="txtItemID" aria-describedby="emailHelp">
+                                <span class="control-error" id="lblItemId"></span>
                             </div>
                         </div>
                         <div class="col">
                             <div class="mb-3">
                                 <label for="txtItemName" class="form-label">Item Name</label>
-                                <input type="email" class="form-control" id="txtItemName" aria-describedby="emailHelp">
+                                <input  class="form-control" id="txtItemName" aria-describedby="emailHelp">
+                                <span class="control-error" id="lblItemName"></span>
                             </div>
                         </div>
                     </div>
@@ -84,13 +86,15 @@
                         <div class="col">
                             <div class="mb-3">
                                 <label for="txtQTY" class="form-label">Qty On Hand</label>
-                                <input type="email" class="form-control" id="txtQTY" aria-describedby="emailHelp">
+                                <input  class="form-control" id="txtQTY" aria-describedby="emailHelp">
+                                <span class="control-error" id="lblItemQty"></span>
                             </div>
                         </div>
                         <div class="col">
                             <div class="mb-3">
                                 <label for="txtPrice" class="form-label">Price</label>
-                                <input type="email" class="form-control" id="txtPrice" aria-describedby="emailHelp">
+                                <input class="form-control" id="txtPrice" aria-describedby="emailHelp">
+                                <span class="control-error" id="lblItemPrice"></span>
                             </div>
                         </div>
                     </div>
@@ -101,10 +105,9 @@
             <div class="col">
                 <div class="btn-group">
                     <button class="btn btn-primary" id="btnItem">Save Item</button>
-                    <button class="btn btn-danger" id="btnCusDelete">Remove</button>
+                    <button class="btn btn-danger" id="btnDelete">Remove</button>
                     <button class="btn btn-warning" id="btnUpdate">Update</button>
-                    <button class="btn btn-success">Get All</button>
-                    <button class="btn btn-danger" id="btn-clear1">Clear All</button>
+                    <button class="btn btn-danger" id="btn-clear">Clear All</button>
                 </div>
             </div>
         </div>
@@ -135,10 +138,89 @@
     var item;
     var ItemDetails = [];
 
+    $('#txtItemID').focus();
+
+    const ItemIDregEx = /^(I00-)[0-9]{3}$/;
+    const ItemNameregEx = /^[A-z/ ]{5,30}$/;
+    const ItemQtyOnHandregEx = /^[0-9./]{1,}$/;
+    const ItemPriceregEx = /^[0-9.]{3,}$/;
+
+    let ItemVali = [];
+
+    ItemVali.push({reg:ItemIDregEx,field:$('#txtItemID'),error:'Item Code is Not match To Valied Patten:I00-001'});
+    ItemVali.push({reg:ItemNameregEx,field:$('#txtItemName'),error:'Item Name is Not match To Valied Patten'});
+    ItemVali.push({reg:ItemQtyOnHandregEx,field:$('#txtQTY'),error:'Item Qty is Not match To Valied Patten'});
+    ItemVali.push({reg:ItemPriceregEx,field:$('#txtPrice'),error:'Item price is Not match To Valied Patten'});
+
+    $('#txtItemID,#txtItemName,#txtQTY,#txtPrice').on('keyup',function () {
+        checkValied();
+    });
+
+    $('#txtItemID,#txtItemName,#txtQTY,#txtPrice').on('keyup',function () {
+        checkValied();
+    });
+
+    function checkValied() {
+        let error = 0;
+        for (let validation of ItemVali){
+            if(validation.reg.test(validation.field.val())){
+                textSuccess(validation.field,"");
+            }else {
+                error = error+1;
+                setTextError(validation.field,validation.error);
+            }
+        }
+        setButtonState(error);
+    }
+
+    function check(regex,field) {
+        let inputValue = field.val();
+        return regex.test(inputValue) ? true : false;
+    }
+
+    function setTextError(field,error) {
+        if (field.val().length <= 0) {
+            defaulText(field,"");
+        } else {
+            field.css('border', '2px solid red');
+            field.parent().children('span').text(error);
+        }
+    }
+
+    function textSuccess(field,error) {
+        if (field.val().length <= 0){
+            defaulText(field,"");
+        }else {
+            field.css('border','2px solid green');
+            field.parent().children('span').text(error);
+        }
+    }
+
+    function defaulText(field,error) {
+        field.css('border','2px solid red');
+        field.parent().children('span').text(error);
+    }
+
+    function focusText(field) {
+        field.focus();
+    }
+
+    function setButtonState(value){
+        if (value>0){
+            $("#btnItem").attr('disabled',true);
+            $("#btnDelete").attr('disabled',true);
+            $("#btnUpdate").attr('disabled',true);
+        }else{
+            $("#btnItem").attr('disabled',false);
+            $("#btnDelete").attr('disabled',false);
+            $("#btnUpdate").attr('disabled',false);
+        }
+    }
+
     function clear() {
         $('#tblItem').empty();
     }
-    function loadAllCustomer(){
+    function loadAllItems(){
         clear();
         for (var i of ItemDetails){
 
@@ -160,7 +242,7 @@
         }
 
         ItemDetails.push(item);
-        loadAllCustomer();
+        loadAllItems();
         bindRowClickEvents();
         clickRmove();
     })
@@ -179,7 +261,7 @@
             $('#txtItemID').val(id);
             $('#txtItemName').val(name);
             $('#txtQTY').val(Qty);
-            $('#txtItemPrice').val(price);
+            $('#txtPrice').val(price);
         })
     }
 
@@ -189,32 +271,121 @@
         })
     }
 
-    $('#txtItemID,#txtItemName,#txtQTY,#txtPrice').keydown(function (event) {
+    $(document).keydown(function (event) {
         if (event.key == "Tab"){
             event.preventDefault()
         }
     });
 
     $('#txtItemID').keydown(function (event) {
-        if (event.key=="Enter") {
-            $('#txtItemName').focus()
+        if (event.key=="Enter" && check(ItemIDregEx,$('#txtItemID'))) {
+            focusText($('#txtItemName'));
         }
     });
     $('#txtItemName').keydown(function (event) {
-        if (event.key=="Enter") {
-            $('#txtQTY').focus();
+        if (event.key=="Enter" && check(ItemNameregEx,$('#txtItemName'))) {
+            focusText($('#txtQTY'));
         }
     });
     $('#txtQTY').keydown(function (event) {
-        if (event.key=="Enter") {
-            $('#txtPrice').focus();
+        if (event.key=="Enter" && check(ItemQtyOnHandregEx,$('#txtQTY'))) {
+            focusText($('#txtPrice'));
         }
     });
     $('#txtPrice').keydown(function (event) {
-        if (event.key=="Enter") {
+        if (event.key=="Enter" && check(ItemPriceregEx,$('#txtPrice'))) {
             $('#btnItem').focus();
         }
     });
+
+    $('#btn-clear').click(function () {
+        ClearTextFields();
+    })
+
+    function ClearTextFields() {
+        $('#txtItemID,#txtItemName,#txtQTY,#txtPricer').val("");
+        checkValied()
+    }
+
+    $('#btnSearch').click(function () {
+        let typedId = $('#Search').val();
+        let item = SearchItem(typedId);
+        if (item != null){
+            setTextfieldValues(item.id, item.name, item.Qty, item.price);
+        }else {
+            alert(typedId+"Not Used...");
+            setTextfieldValues("","","","");
+        }
+    });
+
+
+    function setTextfieldValues(id, name, Qty, price) {
+        $("#txtItemID").val(id);
+        $("#txtItemName").val(name);
+        $("#txtQTY").val(Qty);
+        $("#txtPrice").val(price);
+    }
+
+
+    function SearchItem(ItemId) {
+        for ( let item of ItemDetails){
+            if (item.id == ItemId){
+                return item;
+            }
+        }
+        return null;
+    }
+
+    $('#btnDelete').click(function () {
+        let typedId = $('#txtItemID').val();
+
+        let option = confirm("do you want to delete the Item..!")
+        if (option){
+            if (DeleteItem(typedId)) {
+                alert("Item Deleted Successfully !")
+                setTextfieldValues("","","","");
+            }else{
+                alert("Item Not Delete..!")
+            }
+        }
+    });
+
+    function DeleteItem(ItemId) {
+        let Item = SearchItem(ItemId);
+        if (Item != null){
+            let index = ItemDetails.indexOf(Item);
+            ItemDetails.splice(index,1);
+            loadAllItems();
+            return true
+        }else {
+            return false;
+        }
+    }
+
+    $('#btnUpdate').click(function () {
+        let typedId = $('#txtItemID').val();
+        if (UpdateItem(typedId)){
+            alert("Item Update Successfully !")
+            setTextfieldValues("","","","")
+        }else {
+            alert("Not Updated..")
+        }
+    });
+
+    function UpdateItem(ItemId) {
+        let customer = SearchItem(ItemId);
+        if (customer != null){
+            customer.id = $('#txtItemID').val();
+            customer.name = $('#txtItemName').val();
+            customer.Qty = $('#txtQTY').val();
+            customer.price = $('#txtPrice').val();
+            loadAllItems();
+            return true;
+        }else {
+            return false;
+        }
+    }
+
 </script>
 </body>
 </html>
