--- a/assigments/CSS/Frameworks/pos/pages/PlaceOrderForm.html
+++ b/assigments/CSS/Frameworks/pos/pages/PlaceOrderForm.html
@@ -118,6 +118,7 @@
                                 <div class="mb-3">
                                     <label for="txtCustID" class="form-label">Customer ID</label>
                                     <input type="text" class="form-control" id="txtCustID">
+                                    <span class="control-error" id="lblCustID"></span>
                                 </div>
                             </div>
                             <div class="col">
@@ -130,8 +131,8 @@
                         <div class="row">
                             <div class="col">
                                 <div class="mb-3">
-                                    <label for="txtCustAddres" class="form-label">Customer Address</label>
-                                    <input type="text" class="form-control" id="txtCustAddres">
+                                    <label for="txtCustAddress" class="form-label">Customer Address</label>
+                                    <input type="text" class="form-control" id="txtCustAddress">
                                 </div>
                             </div>
                             <div class="col">
@@ -153,6 +154,7 @@
                                 <div class="mb-3">
                                     <label for="txtItemCode" class="form-label">Item Code</label>
                                     <input type="text" class="form-control" id="txtItemCode" aria-describedby="emailHelp">
+                                    <span class="control-error" id="lblItemCode"></span>
                                 </div>
                             </div>
                             <div class="col">
@@ -181,11 +183,13 @@
                                 <div class="mb-3">
                                     <label for="txtOrderQTY" class="form-label">Order QTY</label>
                                     <input type="text" class="form-control" id="txtOrderQTY">
+                                    <span class="control-error" id="lblQty"></span>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="mb-3">
                                     <button type="button" class="btn btn-danger" ID="btnAddItem">Add Item</button>
+                                    <button class="btn btn-warning" id="btn-clear">Clear All</button>
                                 </div>
                             </div>
                         </div>
@@ -218,6 +222,79 @@
     var item;
     var OrderItemDetails = [];
 
+    $('#txtCustID').focus();
+
+    const custIDregEx = /^(C00-)[0-9]{3}$/;
+    const ItemCoderegEx = /^(I00-)[0-9]{3}$/;
+    const ItemQTYregEx = /^[0-9.]{1,}$/;
+
+    let OrderVali = [];
+
+    OrderVali.push({reg:custIDregEx,field:$('#txtCustID'),error:'Customer Id is not match to Valied Patten :C00-001'});
+    OrderVali.push({reg:ItemCoderegEx,field:$('#txtItemCode'),error:'Item Code is not match to Valied Patten :I00-001'});
+    OrderVali.push({reg:ItemQTYregEx,field:$('#txtOrderQTY'),error:'Item Qty is not match to Valied Patten'});
+
+    $('#txtCustID,#txtItemCode,#txtOrderQTY').on('keyup',function () {
+        checkValied();
+    });
+
+    $('#txtCustID,#txtItemCode,#txtOrderQTY').on('blur',function () {
+        checkValied();
+    });
+
+    function checkValied() {
+        let error = 0;
+        for (let validation of OrderVali){
+            if(validation.reg.test(validation.field.val())){
+                textSuccess(validation.field,"");
+            }else {
+                error = error+1;
+                setTextError(validation.field,validation.error);
+            }
+        }
+        setButtonState(error);
+    }
+
+    function check(regex,field) {
+        let inputValue = field.val();
+        return regex.test(inputValue) ? true : false;
+    }
+
+    function setTextError(field,error) {
+        if (field.val().length <= 0) {
+            defaulText(field,"");
+        } else {
+            field.css('border', '2px solid red');
+            field.parent().children('span').text(error);
+        }
+    }
+
+    function textSuccess(field,error) {
+        if (field.val().length <= 0){
+            defaulText(field,"");
+        }else {
+            field.css('border','2px solid green');
+            field.parent().children('span').text(error);
+        }
+    }
+
+    function defaulText(field,error) {
+        field.css('border','2px solid red');
+        field.parent().children('span').text(error);
+    }
+
+    function focusText(field) {
+        field.focus();
+    }
+
+    function setButtonState(value){
+        if (value>0){
+            $("#btnAddItem").attr('disabled',true);
+        }else{
+            $("#btnAddItem").attr('disabled',false);
+        }
+    }
+
     function clar() {
         $('#tblOrder').empty();
     }
@@ -225,7 +302,8 @@
     function loadAllItem(){
         clar();
         for(var i of OrderItemDetails){
-            $('#tblOrder').append('<tr><td></td><td>'+i.id+'</td><td>'+i.name+'</td><td>'+ i.Qty+'</td><td>'+i.price+'</td></tr>')
+            let value = i.price * i.Qty;
+            $('#tblOrder').append('<tr><td></td><td>'+i.id+'</td><td>'+i.name+'</td><td>'+ i.Qty+'</td><td>'+value+'</td></tr>')
         }
     }
 
@@ -272,20 +350,82 @@
         }
     });
     $('#txtCustID').keydown(function (event) {
-        if (event.key=="Enter") {
-            $('#txtItemCode').focus();
+        if (event.key=="Enter" && check(custIDregEx,$('#txtCustID'))) {
+            focusText($('#txtItemCode'))
         }
     });
     $('#txtItemCode').keydown(function (event) {
-        if (event.key=="Enter") {
-            $('#txtOrderQTY').focus();
+        if (event.key=="Enter" && check(ItemCoderegEx,$('#txtItemCode'))) {
+           focusText( $('#txtOrderQTY'))
         }
     });
     $('#txtOrderQTY').keydown(function (event) {
-        if (event.key=="Enter") {
+        if (event.key=="Enter" && check(ItemQTYregEx, $('#txtOrderQTY'))) {
             $('#btnAddItem').focus();
         }
     });
+
+    $('#btn-clear').click(function () {
+        ClearTextFields();
+    });
+
+    function ClearTextFields() {
+        $('#Total,#SubTotal,#Balance,#Cash,#Discount,#OrderID,#OrderDate,#txtCustID,#txtCustName,#txtCustAddress,#txtCustTell,#txtItemCode,#txtItemName,#txtQTYonHand,#txtItemPrice,#txtOrderQTY').val("");
+        checkValied();
+    }
+    $('#txtCustID').click(function () {
+        let typedId = $('#txtCustID').val();
+        let cust = SearchCustomer(typedId);
+        if (cust != null){
+            setTextfieldValuesCust(cust.id, cust.name, cust.Address, cust.telnum);
+        }else {
+            alert(typedId+"Not Used...");
+            setTextfieldValues("","","","");
+        }
+    });
+
+    $('#txtItemCode').click(function () {
+        let typedId = $('#txtItemCode').val();
+        let item = SearchItem(typedId);
+        if (item != null){
+            setTextfieldValuesItem(item.id, item.name, item.Qty, item.price);
+        }else {
+            alert(typedId+"Not Used...");
+            setTextfieldValues("","","","");
+        }
+    });
+
+    function setTextfieldValuesCust(id, name, Address, telnum) {
+        $("#txtItemID").val(id);
+        $("#txtItemName").val(name);
+        $("#txtQTY").val(Address);
+        $("#txtPrice").val(telnum);
+    }
+
+    function setTextfieldValuesItem(id, name, Qty, price) {
+        $("#txtItemID").val(id);
+        $("#txtItemName").val(name);
+        $("#txtOrderQTY").val(Qty);
+        $("#txtPrice").val(price);
+    }
+
+    function SearchCutomer(CustId) {
+        for ( let customer of CustomerDetails){
+            if (customer.id == CustId){
+                return customer;
+            }
+        }
+        return null;
+    }
+
+    function SearchItem(ItemId) {
+        for ( let item of ItemDetails){
+            if (item.id == ItemId){
+                return item;
+            }
+        }
+        return null;
+    }
 </script>
 </body>
 </html>
