--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <a href="tel:+94754313114"><div></div></a>
                     <a href="#"><div></div></a>
                     <a href="#"><div></div></a>
-                    <a href="#"><div></div></a>
+                    <a href="mailto:superdilshan999@gmail.com"><div></div></a>
                 </section>
                 <section>
                     <a href="https://github.com/dilshan10" target="_blank"><div></div></a>
@@ -171,7 +171,7 @@
         </section>
         <a href="#heder"><div></div></a>
         <a href="tel:+94754313114"><div><i class="fa-solid fa-phone"></i></div></a>
-        <a href="mail:superdilshan999@gmail.com"><div><i class="fa-solid fa-message"></i></div></a>
+        <a href="mailto:superdilshan999@gmail.com"><div><i class="fa-solid fa-message"></i></div></a>
 
     </main>
     <footer>
