Add game background

--- a/assigments/JS/game/index.html
+++ b/assigments/JS/game/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JS_Game_Development</title>
+    <link rel="stylesheet" href="assets/css/GameStyle.css">
 </head>
 <body>
 
