Add Animation to breathing character

--- a/assigments/JS/game/index.html
+++ b/assigments/JS/game/index.html
@@ -13,4 +13,6 @@
 
 </section>
 </body>
+<script src="assets/js/jquery-3.6.1.min.js"></script>
+<script src="assets/js/CharacterScrpt.js"></script>
 </html>
