add Game Start Page

--- a/assigments/JS/game/index.html
+++ b/assigments/JS/game/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <section>
-    <div id="CHARACTER">
-
+    <div>
+        <h2>Running Ninja</h2>
     </div>
-
+    <div></div>
 </section>
 </body>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
