add main cracter

--- a/assigments/JS/game/index.html
+++ b/assigments/JS/game/index.html
@@ -10,9 +10,8 @@
     <div>
         <h2>Running Ninja</h2>
     </div>
-    <div></div>
+    <a href="pages/firstRound.html"><div></div></a>
 </section>
 </body>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
-<script src="assets/js/CharacterScrpt.js"></script>
 </html>
