add character idia Animation

--- a/assigments/JS/game/pages/firstRound.html
+++ b/assigments/JS/game/pages/firstRound.html
@@ -5,10 +5,11 @@
     <title>JS_Game_Development</title>
     <link rel="stylesheet" href="firstRoundCSS.css">
 </head>
-<body>
-<section>
-    <div></div>
-    <div></div>
+<body onload="startIdleAnimation();setBarriers()">
+<section id="background">
+    <img src="../assets/cracter moments/png/Idle__000.png" alt="this is image of the character" id="character">
 </section>
+<script src="../assets/js/CharacterScrpt.js"></script>
+<script src="../assets/js/jquery-3.6.1.min.js"></script>
 </body>
 </html>
